--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   
   <title>Frontend Mentor | Age calculator app</title>
 
+  <link rel="stylesheet" href="assets/css/index.css">
+
 </head>
 <body>
 
