main.css structured

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
     <div class="calculate-divider">
       <hr class="calculate-divider__line">
-      <img src="assets/images/icon-arrow.svg" alt="Arrow icon">
+      <button class="calculate-divider__button">
+        <img src="assets/images/icon-arrow.svg" alt="Arrow icon">
+      </button>
     </div>
 
     <div class="results">
