--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="calculate-divider">
       <hr class="calculate-divider__line">
-      <button class="calculate-divider__button">
+      <button class="calculate-divider__button" onclick="calculateAge()">
         <img src="assets/images/icon-arrow.svg" alt="Arrow icon">
       </button>
     </div>
@@ -52,5 +52,6 @@
     </div>
   </main>
 
+  <script src="assets/js/index.js" defer></script>
 </body>
 </html>
