--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
       <div class="date-input date-input--day">
         <span class="date-input__label">Day</span>
         <input class="date-input__field" placeholder="DD">
+        <small class="error-message"></small>
       </div>
       <div class="date-input date-input--month">
         <span class="date-input__label">Month</span>
         <input class="date-input__field" placeholder="MM">
+        <small class="error-message"></small>
       </div>
       <div class="date-input date-input--year">
         <span class="date-input__label">Year</span>
         <input class="date-input__field" placeholder="YYYY">
+        <small class="error-message"></small>
       </div>
     </div>
 
     <div class="calculate-divider">
       <hr class="calculate-divider__line">
-      <button class="calculate-divider__button" onclick="calculateAge()">
+      <button class="calculate-divider__button" onclick="calculateAge(event)">
         <img src="assets/images/icon-arrow.svg" alt="Arrow icon">
       </button>
     </div>
