created error whole form validation

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <div class="date-inputs">
       <div class="date-input date-input--day">
         <span class="date-input__label">Day</span>
-        <input class="date-input__field" placeholder="DD">
+        <input type="number" class="date-input__field" placeholder="DD">
         <small class="error-message"></small>
       </div>
       <div class="date-input date-input--month">
         <span class="date-input__label">Month</span>
-        <input class="date-input__field" placeholder="MM">
+        <input type="number" class="date-input__field" placeholder="MM">
         <small class="error-message"></small>
       </div>
       <div class="date-input date-input--year">
         <span class="date-input__label">Year</span>
-        <input class="date-input__field" placeholder="YYYY">
+        <input type="number" class="date-input__field" placeholder="YYYY">
         <small class="error-message"></small>
       </div>
     </div>
